--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "practica-profesional-playwright",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "playwright test",
+    "test:ui": "playwright test --ui",
+    "test:debug": "playwright test --debug",
+    "report": "playwright show-report",
+    "install:browsers": "playwright install --with-deps"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
