--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -72,7 +72,10 @@ jobs:
 
       - name: Merge blob reports into one HTML report
         run: |
-          npx playwright merge-reports --reporter=html ./artifacts
+          mkdir -p merged-blob-report
+          find artifacts -type f -name "*.zip" -path "*blob-report*" -exec cp {} merged-blob-report/ \;
+          ls -la merged-blob-report
+          npx playwright merge-reports --reporter=html merged-blob-report
 
       - name: Upload final Playwright HTML report
         uses: actions/upload-artifact@v4
