--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,5 +1,14 @@
 name: Playwright Tests (Sharded CI)
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: pages
+  cancel-in-progress: true
+
 on:
   push:
     branches: [ main ]
@@ -13,8 +22,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        shardTotal: [4]
-        shardIndex: [1, 2, 3, 4]
+        shardTotal: [2]
+        shardIndex: [1, 2]
 
     steps:
       - name: Checkout
@@ -43,6 +52,7 @@ jobs:
         with:
           name: blob-report-shard-${{ matrix.shardIndex }}
           path: blob-report/
+          if-no-files-found: error
           retention-days: 30
 
   merge-report:
@@ -72,15 +82,46 @@ jobs:
 
       - name: Merge blob reports into one HTML report
         run: |
+          echo "Artifacts downloaded:"
+          find artifacts -maxdepth 4 -type f || true
+
           mkdir -p merged-blob-report
           find artifacts -type f -name "*.zip" -path "*blob-report*" -exec cp {} merged-blob-report/ \;
+
+          echo "Merged blob report files:"
           ls -la merged-blob-report
+
           npx playwright merge-reports --reporter=html merged-blob-report
 
       - name: Upload final Playwright HTML report
-        uses: actions/upload-artifact@v4
         if: always()
+        uses: actions/upload-artifact@v4
         with:
           name: playwright-report
           path: playwright-report/
           retention-days: 30
+
+  deploy-pages:
+    name: Deploy report to GitHub Pages
+    runs-on: ubuntu-latest
+    needs: [merge-report]
+    if: always()
+
+    steps:
+      - name: Download final Playwright HTML report
+        uses: actions/download-artifact@v4
+        with:
+          name: playwright-report
+          path: playwright-report
+
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: playwright-report
+
+      - id: deploy-to-github-pages
+        name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v4
+
+      - name: Get GitHub Pages URL
+        run: 'echo "GitHub Pages URL: https://${{ steps.deploy-to-github-pages.outputs.page_url }}"'
